// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendModal should display send modal form 1`] = `
<actionmodal-stub
  id="send-modal"
  notifymessage="[object Object]"
  submissionerrorprefix="Sending tokens failed"
  title="Send"
  transactiondata="[object Object]"
  validate="function () { [native code] }"
>
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="send-denomination"
    fieldlabel="Denomination"
  >
    <tmfield-stub
      id="send-denomination"
      readonly=""
      type="text"
      value="STAKE"
    />
     
    <!---->
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tmfield-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value=""
    />
     
    <!---->
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="amount"
    fieldlabel="Amount"
  >
    <span
      class="input-suffix-denom"
    >
      STAKE
    </span>
     
    <tmfieldgroup-stub>
      <tmfield-stub
        class="tm-field-addon"
        id="amount"
        placeholder="Amount"
        type="number"
      />
       
      <tmbtn-stub
        class="secondary addon-max"
        type="button"
        value="Set Max"
      />
    </tmfieldgroup-stub>
     
    <tmformmsg-stub
      msg="doesn't have any STAKEs"
      name="Wallet"
      type="custom"
    />
  </tmformgroup-stub>
   
  <tmbtn-stub
    id="edit-memo-btn"
    type="secondary"
    value="Edit Memo"
  />
</actionmodal-stub>
`;

exports[`SendModal validation should show address required error 1`] = `
<actionmodal-stub
  amount="2"
  id="send-modal"
  notifymessage="[object Object]"
  submissionerrorprefix="Sending tokens failed"
  title="Send"
  transactiondata="[object Object]"
  validate="function () { [native code] }"
>
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="send-denomination"
    fieldlabel="Denomination"
  >
    <tmfield-stub
      id="send-denomination"
      readonly=""
      type="text"
      value="STAKE"
    />
     
    <!---->
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    error="true"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tmfield-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value=""
    />
     
    <tmformmsg-stub
      msg=""
      name="Address"
      type="required"
    />
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="amount"
    fieldlabel="Amount"
  >
    <span
      class="input-suffix-denom"
    >
      STAKE
    </span>
     
    <tmfieldgroup-stub>
      <tmfield-stub
        class="tm-field-addon"
        id="amount"
        placeholder="Amount"
        type="number"
        value="2"
      />
       
      <tmbtn-stub
        class="secondary addon-max"
        type="button"
        value="Set Max"
      />
    </tmfieldgroup-stub>
     
    <!---->
  </tmformgroup-stub>
   
  <tmbtn-stub
    id="edit-memo-btn"
    type="secondary"
    value="Edit Memo"
  />
</actionmodal-stub>
`;

exports[`SendModal validation should show bech32 error when address length is too long 1`] = `
<actionmodal-stub
  amount="2"
  id="send-modal"
  notifymessage="[object Object]"
  submissionerrorprefix="Sending tokens failed"
  title="Send"
  transactiondata="[object Object]"
  validate="function () { [native code] }"
>
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="send-denomination"
    fieldlabel="Denomination"
  >
    <tmfield-stub
      id="send-denomination"
      readonly=""
      type="text"
      value="STAKE"
    />
     
    <!---->
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    error="true"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tmfield-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value="asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf"
    />
     
    <tmformmsg-stub
      msg=""
      name="Address"
      type="bech32"
    />
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="amount"
    fieldlabel="Amount"
  >
    <span
      class="input-suffix-denom"
    >
      STAKE
    </span>
     
    <tmfieldgroup-stub>
      <tmfield-stub
        class="tm-field-addon"
        id="amount"
        placeholder="Amount"
        type="number"
        value="2"
      />
       
      <tmbtn-stub
        class="secondary addon-max"
        type="button"
        value="Set Max"
      />
    </tmfieldgroup-stub>
     
    <!---->
  </tmformgroup-stub>
   
  <tmbtn-stub
    id="edit-memo-btn"
    type="secondary"
    value="Edit Memo"
  />
</actionmodal-stub>
`;

exports[`SendModal validation should show bech32 error when address length is too short 1`] = `
<actionmodal-stub
  amount="2"
  id="send-modal"
  notifymessage="[object Object]"
  submissionerrorprefix="Sending tokens failed"
  title="Send"
  transactiondata="[object Object]"
  validate="function () { [native code] }"
>
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="send-denomination"
    fieldlabel="Denomination"
  >
    <tmfield-stub
      id="send-denomination"
      readonly=""
      type="text"
      value="STAKE"
    />
     
    <!---->
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    error="true"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tmfield-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value="asdf"
    />
     
    <tmformmsg-stub
      msg=""
      name="Address"
      type="bech32"
    />
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="amount"
    fieldlabel="Amount"
  >
    <span
      class="input-suffix-denom"
    >
      STAKE
    </span>
     
    <tmfieldgroup-stub>
      <tmfield-stub
        class="tm-field-addon"
        id="amount"
        placeholder="Amount"
        type="number"
        value="2"
      />
       
      <tmbtn-stub
        class="secondary addon-max"
        type="button"
        value="Set Max"
      />
    </tmfieldgroup-stub>
     
    <!---->
  </tmformgroup-stub>
   
  <tmbtn-stub
    id="edit-memo-btn"
    type="secondary"
    value="Edit Memo"
  />
</actionmodal-stub>
`;

exports[`SendModal validation should show bech32 error when alphanumeric is wrong 1`] = `
<actionmodal-stub
  id="send-modal"
  notifymessage="[object Object]"
  submissionerrorprefix="Sending tokens failed"
  title="Send"
  transactiondata="[object Object]"
  validate="function () { [native code] }"
>
  <tmformgroup-stub
    class="action-modal-form-group"
    fieldid="send-denomination"
    fieldlabel="Denomination"
  >
    <tmfield-stub
      id="send-denomination"
      readonly=""
      type="text"
      value="STAKE"
    />
     
    <!---->
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    error="true"
    fieldid="send-address"
    fieldlabel="Send To"
  >
    <tmfield-stub
      id="send-address"
      placeholder="Address"
      type="text"
      value=""
    />
     
    <tmformmsg-stub
      msg=""
      name="Address"
      type="required"
    />
  </tmformgroup-stub>
   
  <tmformgroup-stub
    class="action-modal-form-group"
    error="true"
    fieldid="amount"
    fieldlabel="Amount"
  >
    <span
      class="input-suffix-denom"
    >
      STAKE
    </span>
     
    <tmfieldgroup-stub>
      <tmfield-stub
        class="tm-field-addon"
        id="amount"
        placeholder="Amount"
        type="number"
      />
       
      <tmbtn-stub
        class="secondary addon-max"
        type="button"
        value="Set Max"
      />
    </tmfieldgroup-stub>
     
    <tmformmsg-stub
      msg="doesn't have any STAKEs"
      name="Wallet"
      type="custom"
    />
  </tmformgroup-stub>
   
  <tmbtn-stub
    id="edit-memo-btn"
    type="secondary"
    value="Edit Memo"
  />
</actionmodal-stub>
`;
